Move promise package to root directory
It seems mandatory as Functest must install promise in editable mode.
Then npm install can be called in the source directory.
It completes "Add promise package" [1]

It would have worked well in classical mode.

[1] https://gerrit.opnfv.org/gerrit/#/c/38639/

Change-Id: Ia9ae55b127d0d324d97974f5e9b1923d7636d7cd
Signed-off-by: Cédric Ollivier <cedric.ollivier@orange.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,5 +4,5 @@ version = 2017.9.0
 home-page = https://wiki.opnfv.org/display/promise/Promise
 
 [files]
-packages = .
-scripts = run_promise_tests.py
+packages = promise/test/functest
+scripts = promise/test/functest/run_promise_tests.py
