Added support for Keystone v3
JIRA: PROMISE-80

Modified Promise shim-layer as well

Change-Id: I82340a6af5c3e6056e77323ca5c44ecdf4e109b6
Signed-off-by: Bertrand Souville <souville@docomolab-euro.com>
(cherry picked from commit a8cd506d6759833231b1b8806082d793faf0997a)

--- a/source/config/custom-environment-variables.yaml
+++ b/source/config/custom-environment-variables.yaml
@@ -11,11 +11,13 @@ openstack:
   auth:
     endpoint: OS_AUTH_URL
     strategy: OS_AUTH_STRATEGY
-    tenant:
-      id: OS_TENANT_ID
-      name: OS_TENANT_NAME
+    project:
+      id: OS_PROJECT_ID
+      name: OS_PROJECT_NAME
+      domain-name: OS_PROJECT_DOMAIN_NAME
     username: OS_USERNAME
     password: OS_PASSWORD
+    user-domain-name: OS_USER_DOMAIN_NAME
   test:
     image:  OS_TEST_IMAGE
     flavor: OS_TEST_FLAVOR
